// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component Snapshots > AccessibleButton > renders all button sizes > button-size-lg 1`] = `
<button
  aria-busy="false"
  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 px-6 py-4 text-lg min-h-[44px] "
  role="button"
>
  <div
    class="flex flex-col items-center"
  >
    <span>
      LG
       Button
    </span>
  </div>
</button>
`;

exports[`Component Snapshots > AccessibleButton > renders all button sizes > button-size-md 1`] = `
<button
  aria-busy="false"
  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 px-4 py-3 text-base min-h-[44px] "
  role="button"
>
  <div
    class="flex flex-col items-center"
  >
    <span>
      MD
       Button
    </span>
  </div>
</button>
`;

exports[`Component Snapshots > AccessibleButton > renders all button sizes > button-size-sm 1`] = `
<button
  aria-busy="false"
  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 px-3 py-2 text-sm min-h-[44px] "
  role="button"
>
  <div
    class="flex flex-col items-center"
  >
    <span>
      SM
       Button
    </span>
  </div>
</button>
`;

exports[`Component Snapshots > AccessibleButton > renders all button variants > button-variant-error 1`] = `
<button
  aria-busy="false"
  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-error-600 text-white hover:bg-error-700 active:bg-error-800 px-4 py-3 text-base min-h-[44px] "
  role="button"
>
  <div
    class="flex flex-col items-center"
  >
    <span>
      Error
       Button
    </span>
  </div>
</button>
`;

exports[`Component Snapshots > AccessibleButton > renders all button variants > button-variant-primary 1`] = `
<button
  aria-busy="false"
  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 px-4 py-3 text-base min-h-[44px] "
  role="button"
>
  <div
    class="flex flex-col items-center"
  >
    <span>
      Primary
       Button
    </span>
  </div>
</button>
`;

exports[`Component Snapshots > AccessibleButton > renders all button variants > button-variant-secondary 1`] = `
<button
  aria-busy="false"
  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-gray-200 text-gray-900 hover:bg-gray-300 active:bg-gray-400 px-4 py-3 text-base min-h-[44px] "
  role="button"
>
  <div
    class="flex flex-col items-center"
  >
    <span>
      Secondary
       Button
    </span>
  </div>
</button>
`;

exports[`Component Snapshots > AccessibleButton > renders all button variants > button-variant-success 1`] = `
<button
  aria-busy="false"
  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-success-600 text-white hover:bg-success-700 active:bg-success-800 px-4 py-3 text-base min-h-[44px] "
  role="button"
>
  <div
    class="flex flex-col items-center"
  >
    <span>
      Success
       Button
    </span>
  </div>
</button>
`;

exports[`Component Snapshots > AccessibleButton > renders all button variants > button-variant-warning 1`] = `
<button
  aria-busy="false"
  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-warning-600 text-white hover:bg-warning-700 active:bg-warning-800 px-4 py-3 text-base min-h-[44px] "
  role="button"
>
  <div
    class="flex flex-col items-center"
  >
    <span>
      Warning
       Button
    </span>
  </div>
</button>
`;

exports[`Component Snapshots > AccessibleButton > renders button with Malayalam label 1`] = `
<button
  aria-busy="false"
  aria-describedby="test-button-malayalam"
  aria-label="Click Me"
  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-gray-200 text-gray-900 hover:bg-gray-300 active:bg-gray-400 px-4 py-3 text-base min-h-[44px] "
  id="test-button"
  role="button"
>
  <div
    class="flex flex-col items-center"
  >
    <span>
      Click Me
    </span>
    <span
      class="text-xs opacity-80 mt-1"
      id="test-button-malayalam"
      lang="ml"
    >
      ക്ലിക്ക് ചെയ്യുക
    </span>
  </div>
</button>
`;

exports[`Component Snapshots > AccessibleButton > renders default button correctly 1`] = `
<button
  aria-busy="false"
  aria-label="Default Button"
  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 px-4 py-3 text-base min-h-[44px] "
  role="button"
>
  <div
    class="flex flex-col items-center"
  >
    <span>
      Default Button
    </span>
  </div>
</button>
`;

exports[`Component Snapshots > AccessibleButton > renders disabled button 1`] = `
<button
  aria-busy="false"
  aria-label="Disabled Button"
  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-error-600 text-white hover:bg-error-700 active:bg-error-800 px-4 py-3 text-base min-h-[44px] "
  disabled=""
  role="button"
>
  <div
    class="flex flex-col items-center"
  >
    <span>
      Disabled Button
    </span>
  </div>
</button>
`;

exports[`Component Snapshots > AccessibleButton > renders loading button 1`] = `
<button
  aria-busy="true"
  aria-label="Loading Button"
  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 px-4 py-3 text-base min-h-[44px] "
  disabled=""
  role="button"
>
  <svg
    aria-hidden="true"
    class="animate-spin -ml-1 mr-2 h-4 w-4"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      stroke-width="4"
    />
    <path
      class="opacity-75"
      d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
      fill="currentColor"
    />
  </svg>
  <div
    class="flex flex-col items-center"
  >
    <span>
      Loading Button
    </span>
  </div>
</button>
`;

exports[`Component Snapshots > AccessibleButton > renders primary variant button 1`] = `
<button
  aria-busy="false"
  aria-label="Primary Button"
  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 px-6 py-4 text-lg min-h-[44px] "
  role="button"
>
  <div
    class="flex flex-col items-center"
  >
    <span>
      Primary Button
    </span>
  </div>
</button>
`;

exports[`Component Snapshots > Card > renders all card variants > card-variant-default 1`] = `
<div
  class="bg-white rounded-lg border border-gray-200 transition-all duration-200 shadow-sm "
>
  <div
    class="p-4"
  >
    <div
      class="text-center"
    >
      <h3
        class="text-lg font-semibold text-gray-900 mb-1"
      >
        Default Card
      </h3>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Card > renders all card variants > card-variant-elevated 1`] = `
<div
  class="bg-white rounded-lg border border-gray-200 transition-all duration-200 shadow-lg "
>
  <div
    class="p-4"
  >
    <div
      class="text-center"
    >
      <h3
        class="text-lg font-semibold text-gray-900 mb-1"
      >
        Elevated Card
      </h3>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Card > renders all card variants > card-variant-interactive 1`] = `
<button
  aria-label="Interactive Card"
  class="bg-white rounded-lg border border-gray-200 transition-all duration-200 shadow-md hover:shadow-lg cursor-pointer touch-target focus-visible active:scale-98 transform hover:border-primary-300 "
  role="button"
  tabindex="0"
>
  <div
    class="p-4"
  >
    <div
      class="text-center"
    >
      <h3
        class="text-lg font-semibold text-gray-900 mb-1"
      >
        Interactive Card
      </h3>
    </div>
  </div>
</button>
`;

exports[`Component Snapshots > Card > renders basic card 1`] = `
<div
  class="bg-white rounded-lg border border-gray-200 transition-all duration-200 shadow-sm "
>
  <div
    class="p-4"
  >
    <div
      class="text-center"
    >
      <h3
        class="text-lg font-semibold text-gray-900 mb-1"
      >
        Basic Card
      </h3>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Card > renders card with children 1`] = `
<div
  class="bg-white rounded-lg border border-gray-200 transition-all duration-200 shadow-sm "
>
  <div
    class="p-4"
  >
    <div
      class="text-center"
    >
      <h3
        class="text-lg font-semibold text-gray-900 mb-1"
      >
        Card with Children
      </h3>
    </div>
    <div
      class="mt-4"
    >
      <div
        class="p-2 bg-gray-100 rounded"
      >
        <p>
          Child content here
        </p>
        <button>
          Action Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Card > renders card with icon 1`] = `
<div
  class="bg-white rounded-lg border border-gray-200 transition-all duration-200 shadow-sm "
>
  <div
    class="p-4"
  >
    <div
      class="flex justify-center mb-3"
    >
      <div
        class="w-12 h-12 flex items-center justify-center text-primary-600"
      >
        <div
          data-testid="mock-icon"
        >
          📚
        </div>
      </div>
    </div>
    <div
      class="text-center"
    >
      <h3
        class="text-lg font-semibold text-gray-900 mb-1"
      >
        Card with Icon
      </h3>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Card > renders card with subtitle and Malayalam subtitle 1`] = `
<div
  class="bg-white rounded-lg border border-gray-200 transition-all duration-200 shadow-sm "
>
  <div
    class="p-4"
  >
    <div
      class="text-center"
    >
      <h3
        class="text-lg font-semibold text-gray-900 mb-1"
      >
        Complete Card
      </h3>
      <p
        class="text-sm text-gray-600 mb-1"
      >
        English subtitle
      </p>
      <p
        class="text-sm text-gray-500"
        lang="bn"
      >
        മലയാളം സബ്ടൈറ്റിൽ
      </p>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Card > renders disabled interactive card 1`] = `
<div
  class="bg-white rounded-lg border border-gray-200 transition-all duration-200 shadow-md hover:shadow-lg cursor-pointer touch-target focus-visible active:scale-98 transform opacity-50 cursor-not-allowed "
  role="button"
>
  <div
    class="p-4"
  >
    <div
      class="text-center"
    >
      <h3
        class="text-lg font-semibold text-gray-900 mb-1"
      >
        Disabled Card
      </h3>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Card > renders interactive card 1`] = `
<button
  aria-label="Click this card"
  class="bg-white rounded-lg border border-gray-200 transition-all duration-200 shadow-md hover:shadow-lg cursor-pointer touch-target focus-visible active:scale-98 transform hover:border-primary-300 "
  role="button"
  tabindex="0"
>
  <div
    class="p-4"
  >
    <div
      class="text-center"
    >
      <h3
        class="text-lg font-semibold text-gray-900 mb-1"
      >
        Interactive Card
      </h3>
    </div>
  </div>
</button>
`;

exports[`Component Snapshots > Complex Component Combinations > renders card with accessible button 1`] = `
<div
  class="bg-white rounded-lg border border-gray-200 transition-all duration-200 shadow-sm "
>
  <div
    class="p-4"
  >
    <div
      class="flex justify-center mb-3"
    >
      <div
        class="w-12 h-12 flex items-center justify-center text-primary-600"
      >
        <div
          data-testid="mock-icon"
        >
          📚
        </div>
      </div>
    </div>
    <div
      class="text-center"
    >
      <h3
        class="text-lg font-semibold text-gray-900 mb-1"
      >
        Card with Button
      </h3>
    </div>
    <div
      class="mt-4"
    >
      <div
        class="space-y-2"
      >
        <button
          aria-busy="false"
          aria-label="Primary Action"
          class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 px-3 py-2 text-sm min-h-[44px] "
          role="button"
        >
          <div
            class="flex flex-col items-center"
          >
            <span>
              Primary Action
            </span>
          </div>
        </button>
        <button
          aria-busy="false"
          aria-label="Secondary Action"
          class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-gray-200 text-gray-900 hover:bg-gray-300 active:bg-gray-400 px-3 py-2 text-sm min-h-[44px] "
          role="button"
        >
          <div
            class="flex flex-col items-center"
          >
            <span>
              Secondary Action
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Complex Component Combinations > renders interactive card with Malayalam content 1`] = `
<button
  aria-label="Join Islamic Studies class"
  class="bg-white rounded-lg border border-gray-200 transition-all duration-200 shadow-md hover:shadow-lg cursor-pointer touch-target focus-visible active:scale-98 transform hover:border-primary-300 "
  role="button"
  tabindex="0"
>
  <div
    class="p-4"
  >
    <div
      class="flex justify-center mb-3"
    >
      <div
        class="w-12 h-12 flex items-center justify-center text-primary-600"
      >
        <div
          data-testid="mock-icon"
        >
          📚
        </div>
      </div>
    </div>
    <div
      class="text-center"
    >
      <h3
        class="text-lg font-semibold text-gray-900 mb-1"
      >
        Islamic Studies
      </h3>
      <p
        class="text-sm text-gray-600 mb-1"
      >
        Learn the fundamentals of Islam
      </p>
      <p
        class="text-sm text-gray-500"
        lang="bn"
      >
        ഇസ്ലാമിന്റെ അടിസ്ഥാനകാര്യങ്ങൾ പഠിക്കുക
      </p>
    </div>
    <div
      class="mt-4"
    >
      <div
        class="text-sm text-gray-600"
      >
        <p>
          Next class: Today at 2:00 PM
        </p>
        <p
          lang="ml"
        >
          അടുത്ത ക്ലാസ്: ഇന്ന് ഉച്ചയ്ക്ക് 2:00
        </p>
      </div>
    </div>
  </div>
</button>
`;

exports[`Component Snapshots > Complex Component Combinations > renders modal with card and buttons 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center p-4"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black bg-opacity-50 transition-opacity"
  />
  <div
    class="focus-trap-container"
  >
    <div
      class="
            relative bg-white rounded-lg shadow-xl w-full max-w-md
            max-h-[90vh] overflow-y-auto focus:outline-none
          "
      tabindex="-1"
    >
      <div
        class="flex items-center justify-between p-4 border-b border-gray-200"
      >
        <div>
          <h2
            class="text-xl font-semibold text-gray-900"
            id="modal-title"
          >
            Modal with Card
          </h2>
        </div>
        <button
          aria-busy="false"
          aria-label="Close modal"
          class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-gray-200 text-gray-900 hover:bg-gray-300 active:bg-gray-400 px-3 py-2 text-sm min-h-[44px] ml-4 !min-h-[36px] !min-w-[36px] !p-2"
          role="button"
        >
          <div
            class="flex flex-col items-center"
          >
            <span>
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="p-4"
      >
        <div
          class="bg-white rounded-lg border border-gray-200 transition-all duration-200 shadow-sm "
        >
          <div
            class="p-4"
          >
            <div
              class="text-center"
            >
              <h3
                class="text-lg font-semibold text-gray-900 mb-1"
              >
                Card in Modal
              </h3>
              <p
                class="text-sm text-gray-500"
                lang="bn"
              >
                മോഡലിലെ കാർഡ്
              </p>
            </div>
            <div
              class="mt-4"
            >
              <div
                class="flex space-x-2"
              >
                <button
                  aria-busy="false"
                  aria-label="Confirm"
                  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-success-600 text-white hover:bg-success-700 active:bg-success-800 px-3 py-2 text-sm min-h-[44px] "
                  role="button"
                >
                  <div
                    class="flex flex-col items-center"
                  >
                    <span>
                      Confirm
                    </span>
                  </div>
                </button>
                <button
                  aria-busy="false"
                  aria-label="Cancel"
                  class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-error-600 text-white hover:bg-error-700 active:bg-error-800 px-3 py-2 text-sm min-h-[44px] "
                  role="button"
                >
                  <div
                    class="flex flex-col items-center"
                  >
                    <span>
                      Cancel
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Modal > renders all modal sizes > modal-size-2xl 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center p-4"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black bg-opacity-50 transition-opacity"
  />
  <div
    class="focus-trap-container"
  >
    <div
      class="
            relative bg-white rounded-lg shadow-xl w-full max-w-4xl
            max-h-[90vh] overflow-y-auto focus:outline-none
          "
      tabindex="-1"
    >
      <div
        class="flex items-center justify-between p-4 border-b border-gray-200"
      >
        <div>
          <h2
            class="text-xl font-semibold text-gray-900"
            id="modal-title"
          >
            2XL Modal
          </h2>
        </div>
        <button
          aria-busy="false"
          aria-label="Close modal"
          class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-gray-200 text-gray-900 hover:bg-gray-300 active:bg-gray-400 px-3 py-2 text-sm min-h-[44px] ml-4 !min-h-[36px] !min-w-[36px] !p-2"
          role="button"
        >
          <div
            class="flex flex-col items-center"
          >
            <span>
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="p-4"
      >
        <div>
          Content for 
          2xl
           modal
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Modal > renders all modal sizes > modal-size-lg 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center p-4"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black bg-opacity-50 transition-opacity"
  />
  <div
    class="focus-trap-container"
  >
    <div
      class="
            relative bg-white rounded-lg shadow-xl w-full max-w-lg
            max-h-[90vh] overflow-y-auto focus:outline-none
          "
      tabindex="-1"
    >
      <div
        class="flex items-center justify-between p-4 border-b border-gray-200"
      >
        <div>
          <h2
            class="text-xl font-semibold text-gray-900"
            id="modal-title"
          >
            LG Modal
          </h2>
        </div>
        <button
          aria-busy="false"
          aria-label="Close modal"
          class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-gray-200 text-gray-900 hover:bg-gray-300 active:bg-gray-400 px-3 py-2 text-sm min-h-[44px] ml-4 !min-h-[36px] !min-w-[36px] !p-2"
          role="button"
        >
          <div
            class="flex flex-col items-center"
          >
            <span>
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="p-4"
      >
        <div>
          Content for 
          lg
           modal
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Modal > renders all modal sizes > modal-size-md 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center p-4"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black bg-opacity-50 transition-opacity"
  />
  <div
    class="focus-trap-container"
  >
    <div
      class="
            relative bg-white rounded-lg shadow-xl w-full max-w-md
            max-h-[90vh] overflow-y-auto focus:outline-none
          "
      tabindex="-1"
    >
      <div
        class="flex items-center justify-between p-4 border-b border-gray-200"
      >
        <div>
          <h2
            class="text-xl font-semibold text-gray-900"
            id="modal-title"
          >
            MD Modal
          </h2>
        </div>
        <button
          aria-busy="false"
          aria-label="Close modal"
          class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-gray-200 text-gray-900 hover:bg-gray-300 active:bg-gray-400 px-3 py-2 text-sm min-h-[44px] ml-4 !min-h-[36px] !min-w-[36px] !p-2"
          role="button"
        >
          <div
            class="flex flex-col items-center"
          >
            <span>
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="p-4"
      >
        <div>
          Content for 
          md
           modal
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Modal > renders all modal sizes > modal-size-sm 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center p-4"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black bg-opacity-50 transition-opacity"
  />
  <div
    class="focus-trap-container"
  >
    <div
      class="
            relative bg-white rounded-lg shadow-xl w-full max-w-sm
            max-h-[90vh] overflow-y-auto focus:outline-none
          "
      tabindex="-1"
    >
      <div
        class="flex items-center justify-between p-4 border-b border-gray-200"
      >
        <div>
          <h2
            class="text-xl font-semibold text-gray-900"
            id="modal-title"
          >
            SM Modal
          </h2>
        </div>
        <button
          aria-busy="false"
          aria-label="Close modal"
          class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-gray-200 text-gray-900 hover:bg-gray-300 active:bg-gray-400 px-3 py-2 text-sm min-h-[44px] ml-4 !min-h-[36px] !min-w-[36px] !p-2"
          role="button"
        >
          <div
            class="flex flex-col items-center"
          >
            <span>
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="p-4"
      >
        <div>
          Content for 
          sm
           modal
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Modal > renders all modal sizes > modal-size-xl 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center p-4"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black bg-opacity-50 transition-opacity"
  />
  <div
    class="focus-trap-container"
  >
    <div
      class="
            relative bg-white rounded-lg shadow-xl w-full max-w-xl
            max-h-[90vh] overflow-y-auto focus:outline-none
          "
      tabindex="-1"
    >
      <div
        class="flex items-center justify-between p-4 border-b border-gray-200"
      >
        <div>
          <h2
            class="text-xl font-semibold text-gray-900"
            id="modal-title"
          >
            XL Modal
          </h2>
        </div>
        <button
          aria-busy="false"
          aria-label="Close modal"
          class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-gray-200 text-gray-900 hover:bg-gray-300 active:bg-gray-400 px-3 py-2 text-sm min-h-[44px] ml-4 !min-h-[36px] !min-w-[36px] !p-2"
          role="button"
        >
          <div
            class="flex flex-col items-center"
          >
            <span>
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="p-4"
      >
        <div>
          Content for 
          xl
           modal
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Modal > renders basic open modal 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center p-4"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black bg-opacity-50 transition-opacity"
  />
  <div
    class="focus-trap-container"
  >
    <div
      class="
            relative bg-white rounded-lg shadow-xl w-full max-w-md
            max-h-[90vh] overflow-y-auto focus:outline-none
          "
      tabindex="-1"
    >
      <div
        class="flex items-center justify-between p-4 border-b border-gray-200"
      >
        <div>
          <h2
            class="text-xl font-semibold text-gray-900"
            id="modal-title"
          >
            Basic Modal
          </h2>
        </div>
        <button
          aria-busy="false"
          aria-label="Close modal"
          class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-gray-200 text-gray-900 hover:bg-gray-300 active:bg-gray-400 px-3 py-2 text-sm min-h-[44px] ml-4 !min-h-[36px] !min-w-[36px] !p-2"
          role="button"
        >
          <div
            class="flex flex-col items-center"
          >
            <span>
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="p-4"
      >
        <div>
          Modal content here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Modal > renders closed modal (should be empty) 1`] = `null`;

exports[`Component Snapshots > Modal > renders modal with Malayalam title 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center p-4"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black bg-opacity-50 transition-opacity"
  />
  <div
    class="focus-trap-container"
  >
    <div
      class="
            relative bg-white rounded-lg shadow-xl w-full max-w-md
            max-h-[90vh] overflow-y-auto focus:outline-none
          "
      tabindex="-1"
    >
      <div
        class="flex items-center justify-between p-4 border-b border-gray-200"
      >
        <div>
          <h2
            class="text-xl font-semibold text-gray-900"
            id="modal-title"
          >
            Modal with Malayalam
          </h2>
          <p
            class="text-sm text-gray-600 mt-1"
            lang="bn"
          >
            മലയാളം ശീർഷകം
          </p>
        </div>
        <button
          aria-busy="false"
          aria-label="Close modal"
          class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-gray-200 text-gray-900 hover:bg-gray-300 active:bg-gray-400 px-3 py-2 text-sm min-h-[44px] ml-4 !min-h-[36px] !min-w-[36px] !p-2"
          role="button"
        >
          <div
            class="flex flex-col items-center"
          >
            <span>
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="p-4"
      >
        <div>
          Content with Malayalam title
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Modal > renders modal with aria-describedby 1`] = `
<div
  aria-describedby="modal-description"
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center p-4"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black bg-opacity-50 transition-opacity"
  />
  <div
    class="focus-trap-container"
  >
    <div
      class="
            relative bg-white rounded-lg shadow-xl w-full max-w-md
            max-h-[90vh] overflow-y-auto focus:outline-none
          "
      tabindex="-1"
    >
      <div
        class="flex items-center justify-between p-4 border-b border-gray-200"
      >
        <div>
          <h2
            class="text-xl font-semibold text-gray-900"
            id="modal-title"
          >
            Accessible Modal
          </h2>
        </div>
        <button
          aria-busy="false"
          aria-label="Close modal"
          class="touch-target focus-enhanced keyboard-focus-button inline-flex items-center justify-center font-medium rounded-lg transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed active:scale-95 transform transition-transform focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-gray-200 text-gray-900 hover:bg-gray-300 active:bg-gray-400 px-3 py-2 text-sm min-h-[44px] ml-4 !min-h-[36px] !min-w-[36px] !p-2"
          role="button"
        >
          <div
            class="flex flex-col items-center"
          >
            <span>
              <svg
                aria-hidden="true"
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="p-4"
        id="modal-description"
      >
        <div
          id="modal-description"
        >
          This modal has proper ARIA attributes for accessibility
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Snapshots > Modal > renders modal without close button 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center p-4"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black bg-opacity-50 transition-opacity"
  />
  <div
    class="focus-trap-container"
  >
    <div
      class="
            relative bg-white rounded-lg shadow-xl w-full max-w-md
            max-h-[90vh] overflow-y-auto focus:outline-none
          "
      tabindex="-1"
    >
      <div
        class="flex items-center justify-between p-4 border-b border-gray-200"
      >
        <div>
          <h2
            class="text-xl font-semibold text-gray-900"
            id="modal-title"
          >
            No Close Button
          </h2>
        </div>
      </div>
      <div
        class="p-4"
      >
        <div>
          Modal without close button
        </div>
      </div>
    </div>
  </div>
</div>
`;
